--- a/With a Plan/Storyboards/Base.lproj/Main.storyboard
+++ b/With a Plan/Storyboards/Base.lproj/Main.storyboard
@@ -51,6 +51,7 @@
                 <searchBar contentMode="redraw" placeholder="Search" id="vM7-Hz-0Dc">
                     <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                    <color key="barTintColor" systemColor="systemGroupedBackgroundColor"/>
                     <textInputTraits key="textInputTraits"/>
                 </searchBar>
             </objects>
@@ -1346,6 +1347,9 @@
         </systemColor>
         <systemColor name="systemGreenColor">
             <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemGroupedBackgroundColor">
+            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemTealColor">
             <color red="0.35294117647058826" green="0.78431372549019607" blue="0.98039215686274506" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
