--- a/With a Plan/Storyboards/TaskListsTableViewCell.xib
+++ b/With a Plan/Storyboards/TaskListsTableViewCell.xib
@@ -20,33 +20,47 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YFI-1t-eOR">
-                        <rect key="frame" x="16" y="25.5" width="30" height="30"/>
+                        <rect key="frame" x="264" y="20.5" width="40" height="40"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="checkmark.circle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="g2w-Zv-3pS">
-                                <rect key="frame" x="0.0" y="0.5" width="30" height="29"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="checkmark.circle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="g2w-Zv-3pS">
+                                <rect key="frame" x="0.0" y="0.5" width="40" height="39"/>
                                 <color key="tintColor" name="blackColor"/>
                             </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dWA-Pk-vbI">
+                                <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <connections>
+                                    <action selector="checkButtonPress:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="KCT-Ax-czc"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemTealColor"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="30" id="8Yv-WM-c8F"/>
-                            <constraint firstAttribute="width" constant="30" id="vVE-LJ-g0e"/>
+                            <constraint firstItem="g2w-Zv-3pS" firstAttribute="leading" secondItem="YFI-1t-eOR" secondAttribute="leading" id="3By-VJ-IJ5"/>
+                            <constraint firstAttribute="height" constant="40" id="8Yv-WM-c8F"/>
+                            <constraint firstAttribute="bottom" secondItem="dWA-Pk-vbI" secondAttribute="bottom" id="G9p-qK-1Fe"/>
+                            <constraint firstItem="g2w-Zv-3pS" firstAttribute="top" secondItem="YFI-1t-eOR" secondAttribute="top" id="K7s-1q-I6X"/>
+                            <constraint firstItem="dWA-Pk-vbI" firstAttribute="leading" secondItem="YFI-1t-eOR" secondAttribute="leading" id="OS3-PB-dNn"/>
+                            <constraint firstItem="dWA-Pk-vbI" firstAttribute="top" secondItem="YFI-1t-eOR" secondAttribute="top" id="dPO-iH-pfu"/>
+                            <constraint firstAttribute="bottom" secondItem="g2w-Zv-3pS" secondAttribute="bottom" id="jvE-Q5-VEK"/>
+                            <constraint firstAttribute="trailing" secondItem="g2w-Zv-3pS" secondAttribute="trailing" id="o0d-Q8-7qf"/>
+                            <constraint firstAttribute="width" constant="40" id="vVE-LJ-g0e"/>
+                            <constraint firstAttribute="trailing" secondItem="dWA-Pk-vbI" secondAttribute="trailing" id="vwX-xj-beE"/>
                         </constraints>
                     </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MXw-B4-mkw">
-                        <rect key="frame" x="62" y="30" width="242" height="21"/>
+                        <rect key="frame" x="16" y="30" width="232" height="21"/>
                         <fontDescription key="fontDescription" type="system" weight="light" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="MXw-B4-mkw" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="Eag-SL-UbT"/>
-                    <constraint firstAttribute="trailing" secondItem="MXw-B4-mkw" secondAttribute="trailing" constant="16" id="O5a-7q-meq"/>
-                    <constraint firstItem="MXw-B4-mkw" firstAttribute="leading" secondItem="YFI-1t-eOR" secondAttribute="trailing" constant="16" id="OH7-tb-ELw"/>
-                    <constraint firstItem="YFI-1t-eOR" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="RoJ-Jn-Sge"/>
+                    <constraint firstItem="YFI-1t-eOR" firstAttribute="leading" secondItem="MXw-B4-mkw" secondAttribute="trailing" constant="16" id="3QC-zg-dWo"/>
+                    <constraint firstItem="MXw-B4-mkw" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="QH5-Z4-9EU"/>
                     <constraint firstItem="YFI-1t-eOR" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="bSj-h5-ZQN"/>
+                    <constraint firstAttribute="trailing" secondItem="YFI-1t-eOR" secondAttribute="trailing" constant="16" id="hV3-vH-f58"/>
+                    <constraint firstItem="MXw-B4-mkw" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="ydG-bg-9YM"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
